--- a/m68k-elf/scripts/build
+++ b/m68k-elf/scripts/build
@@ -14,7 +14,7 @@ is_var_set "target"
 # Build and install Binutils
 mkdir -p "${BUILD_SRC_DIR}/${target}/binutils"
 cd "${BUILD_SRC_DIR}/${target}/binutils"
-if [ ! -f "${BUILD_STAMPS_DIR}/${target}-configured-binutils" ]; then
+if ! [ -f "${BUILD_STAMPS_DIR}/${target}-configured-binutils" ]; then
     message "Configuring Binutils"
     CFLAGS="-Wno-error=unused-value -Wno-error=shift-negative-value" LDFLAGS="" ../"${BINUTILS_SRC_DIR}"/configure \
         --prefix="${BUILD_INSTALL_DIR}/${target}" \
@@ -32,14 +32,14 @@ if [ ! -f "${BUILD_STAMPS_DIR}/${target}-configured-binutils" ]; then
     create_stamp "${target}-configured-binutils"
 fi
 
-if [ ! -f "${BUILD_STAMPS_DIR}/${target}-built-binutils" ]; then
+if ! [ -f "${BUILD_STAMPS_DIR}/${target}-built-binutils" ]; then
     message "Building Binutils"
     "${MAKE}" 1>> "${BUILD_SRC_DIR}/binutils-${target}.log" 2>&1 || \
         panic "See '${BUILD_SRC_DIR}/binutils-${target}.log'" 1
     create_stamp "${target}-built-binutils"
 fi
 
-if [ ! -f "${BUILD_STAMPS_DIR}/${target}-installed-binutils" ]; then
+if ! [ -f "${BUILD_STAMPS_DIR}/${target}-installed-binutils" ]; then
     message "Installing Binutils"
     "${MAKE}" install 1>> "${BUILD_SRC_DIR}/binutils-${target}.log" 2>&1 || \
         panic "See '${BUILD_SRC_DIR}/binutils-${target}.log'" 1
