--- a/m68k-elf/scripts/build
+++ b/m68k-elf/scripts/build
@@ -19,8 +19,7 @@ if [ "${HOST_OS}" != "Darwin" ]; then
 fi
 
 # -static-libgcc is only relevant for GCC
-compiler_version="$(${CC-gcc} --version 2>&1)"
-if ! echo "${compiler_version}" | grep -E -q "(clang|Apple LLVM) version"; then
+if ! echo "${HOST_COMPILER_VERSION}" | grep -E -q "(clang|Apple LLVM) version"; then
     extra_ldflags="${extra_ldflags} -static-libgcc"
 fi
 
@@ -47,7 +46,7 @@ fi
 if ! [ -f "${BUILD_STAMPS_DIR}/${target}-configured-binutils" ]; then
     message "Configuring Binutils"
     CFLAGS="" \
-    LDFLAGS="$extra_ldflags -static-libstdc++" ../"${BINUTILS_SRC_DIR}"/configure \
+    LDFLAGS="${extra_ldflags} -static-libstdc++" ../"${BINUTILS_SRC_DIR}"/configure \
         ${binutils_configure_options[@]} 1>> "${BUILD_SRC_DIR}/binutils-${target}.log" 2>&1 \
         || panic "See '${BUILD_SRC_DIR}/binutils-${target}.log'" 1
     create_stamp "${target}-configured-binutils"
