--- a/sh2eb-elf/host-x86_64-w64-mingw32.config
+++ b/sh2eb-elf/host-x86_64-w64-mingw32.config
@@ -1,21 +1,26 @@
 CT_CONFIGURE_has_static_link=y
+CT_CONFIGURE_has_cxx11=y
 CT_CONFIGURE_has_wget=y
 CT_CONFIGURE_has_curl=y
 CT_CONFIGURE_has_make_3_81_or_newer=y
+CT_CONFIGURE_has_make_4_0_or_newer=y
 CT_CONFIGURE_has_libtool_2_4_or_newer=y
 CT_CONFIGURE_has_libtoolize_2_4_or_newer=y
 CT_CONFIGURE_has_autoconf_2_65_or_newer=y
 CT_CONFIGURE_has_autoreconf_2_65_or_newer=y
 CT_CONFIGURE_has_automake_1_15_or_newer=y
 CT_CONFIGURE_has_gnu_m4_1_4_12_or_newer=y
+CT_CONFIGURE_has_python_3_4_or_newer=y
+CT_CONFIGURE_has_bison_2_7_or_newer=y
+CT_CONFIGURE_has_python=y
 CT_CONFIGURE_has_git=y
 CT_CONFIGURE_has_md5sum=y
 CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_CONFIG_VERSION_CURRENT="2"
-CT_CONFIG_VERSION="2"
+CT_CONFIG_VERSION_CURRENT="3"
+CT_CONFIG_VERSION="3"
 CT_MODULES=y
 CT_EXPERIMENTAL=y
 CT_DEBUG_CT=y
@@ -27,6 +32,8 @@ CT_BUILD_TOP_DIR="${CT_WORK_DIR:-${CT_TOP_DIR}/.build}/${CT_HOST:+HOST-${CT_HOST
 CT_PREFIX_DIR="${CT_PREFIX:-${HOME}/x-tools}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
 CT_RM_RF_PREFIX_DIR=y
 CT_REMOVE_DOCS=y
+CT_INSTALL_LICENSES=y
+CT_PREFIX_DIR_RO=y
 CT_STRIP_HOST_TOOLCHAIN_EXECUTABLES=y
 CT_STRIP_TARGET_TOOLCHAIN_EXECUTABLES=y
 CT_DOWNLOAD_AGENT_WGET=y
@@ -81,6 +88,7 @@ CT_TARGET_LDFLAGS=""
 CT_WANTS_STATIC_LINK=y
 CT_WANTS_STATIC_LINK_CXX=y
 CT_STATIC_TOOLCHAIN=y
+CT_SHOW_CT_VERSION=y
 CT_TOOLCHAIN_PKGVERSION=""
 CT_TOOLCHAIN_BUGURL="http://github.com/ijacquez/libyaul-build-scripts"
 CT_TARGET_ALIAS_SED_EXPR=""
@@ -163,7 +171,7 @@ CT_GCC_SRC_RELEASE=y
 CT_GCC_PATCH_GLOBAL=y
 CT_GCC_PATCH_ORDER="global"
 CT_GCC_V_8=y
-CT_GCC_VERSION="8.2.0"
+CT_GCC_VERSION="8.3.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -184,14 +192,65 @@ CT_CC_GCC_ENABLE_CXX_FLAGS=""
 CT_CC_GCC_EXTRA_CONFIG_ARRAY="--disable-cld --disable-initfini-array --disable-largefile --disable-hosted-libstdcxx --disable-libstdc__-v3 --disable-libstdcxx-pch --disable-libstdcxx-threads --disable-libstdcxx-time --disable-objc-gc --disable-rpath --disable-dlopen --disable-shared --disable-threads --disable-tls --disable-win32-registry --disable-decimal-float --enable-cxx-flags"
 CT_CC_GCC_MULTILIB_LIST=""
 CT_CC_GCC_STATIC_LIBSTDCXX=y
+CT_CC_GCC_CONFIG_TLS=m
+CT_CC_GCC_USE_GRAPHITE=y
+CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
 CT_CC_GCC_DISABLE_PCH=y
+CT_CC_GCC_LDBL_128=m
 CT_CC_GCC_LNK_HASH_STYLE_DEFAULT=y
 CT_CC_GCC_LNK_HASH_STYLE=""
 CT_CC_GCC_DEC_FLOATS_NO=y
 CT_CC_GCC_DEC_FLOATS="no"
 CT_ALL_CC_CHOICES="GCC"
 CT_CC_LANG_OTHERS="c++"
+CT_DEBUG_GDB=y
+CT_DEBUG_GDB_PKG_KSYM="GDB"
+CT_GDB_DIR_NAME="gdb"
+CT_GDB_USE_GNU=y
+CT_GDB_USE="GDB"
+CT_GDB_PKG_NAME="gdb"
+CT_GDB_SRC_RELEASE=y
+CT_GDB_PATCH_GLOBAL=y
+CT_GDB_PATCH_ORDER="global"
+CT_GDB_V_8_3=y
+CT_GDB_VERSION="8.3.1"
+CT_GDB_MIRRORS="$(CT_Mirrors GNU gdb) $(CT_Mirrors sourceware gdb/releases)"
+CT_GDB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
+CT_GDB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
+CT_GDB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
+CT_GDB_SIGNATURE_FORMAT=""
+CT_GDB_later_than_8_3=y
+CT_GDB_8_3_or_later=y
+CT_GDB_later_than_8_0=y
+CT_GDB_8_0_or_later=y
+CT_GDB_later_than_7_12=y
+CT_GDB_7_12_or_later=y
+CT_GDB_later_than_7_2=y
+CT_GDB_7_2_or_later=y
+CT_GDB_later_than_7_0=y
+CT_GDB_7_0_or_later=y
+CT_GDB_CROSS=y
+CT_GDB_CROSS_STATIC=y
+CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
+CT_GDB_HAS_PKGVERSION_BUGURL=y
+CT_GDB_HAS_PYTHON=y
+CT_GDB_INSTALL_GDBINIT=y
+CT_GDB_HAS_IPA_LIB=y
 CT_ALL_DEBUG_CHOICES="DUMA GDB LTRACE STRACE"
+CT_COMP_LIBS_EXPAT=y
+CT_COMP_LIBS_EXPAT_PKG_KSYM="EXPAT"
+CT_EXPAT_DIR_NAME="expat"
+CT_EXPAT_PKG_NAME="expat"
+CT_EXPAT_SRC_RELEASE=y
+CT_EXPAT_PATCH_GLOBAL=y
+CT_EXPAT_PATCH_ORDER="global"
+CT_EXPAT_V_2_2=y
+CT_EXPAT_VERSION="2.2.8"
+CT_EXPAT_MIRRORS="http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION}"
+CT_EXPAT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
+CT_EXPAT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
+CT_EXPAT_ARCHIVE_FORMATS=".tar.bz2"
+CT_EXPAT_SIGNATURE_FORMAT=""
 CT_COMP_LIBS_GMP=y
 CT_COMP_LIBS_GMP_PKG_KSYM="GMP"
 CT_GMP_DIR_NAME="gmp"
@@ -229,12 +288,15 @@ CT_ISL_later_than_0_18=y
 CT_ISL_0_18_or_later=y
 CT_ISL_later_than_0_15=y
 CT_ISL_0_15_or_later=y
+CT_ISL_REQUIRE_0_15_or_later=y
 CT_ISL_later_than_0_14=y
 CT_ISL_0_14_or_later=y
+CT_ISL_REQUIRE_0_14_or_later=y
 CT_ISL_later_than_0_13=y
 CT_ISL_0_13_or_later=y
 CT_ISL_later_than_0_12=y
 CT_ISL_0_12_or_later=y
+CT_ISL_REQUIRE_0_12_or_later=y
 CT_COMP_LIBS_MPC=y
 CT_COMP_LIBS_MPC_PKG_KSYM="MPC"
 CT_MPC_DIR_NAME="mpc"
@@ -270,11 +332,36 @@ CT_MPFR_4_0_0_or_later=y
 CT_MPFR_later_than_3_0_0=y
 CT_MPFR_3_0_0_or_later=y
 CT_MPFR_REQUIRE_3_0_0_or_later=y
+CT_COMP_LIBS_NCURSES=y
+CT_COMP_LIBS_NCURSES_PKG_KSYM="NCURSES"
+CT_NCURSES_DIR_NAME="ncurses"
+CT_NCURSES_PKG_NAME="ncurses"
+CT_NCURSES_SRC_RELEASE=y
+CT_NCURSES_PATCH_GLOBAL=y
+CT_NCURSES_PATCH_ORDER="global"
+CT_NCURSES_V_6_1=y
+CT_NCURSES_VERSION="6.1"
+CT_NCURSES_MIRRORS="ftp://invisible-island.net/ncurses $(CT_Mirrors GNU ncurses)"
+CT_NCURSES_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
+CT_NCURSES_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
+CT_NCURSES_ARCHIVE_FORMATS=".tar.gz"
+CT_NCURSES_SIGNATURE_FORMAT="packed/.sig"
+CT_NCURSES_HOST_CONFIG_ARGS=""
+CT_NCURSES_HOST_DISABLE_DB=y
+CT_NCURSES_HOST_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
+CT_NCURSES_TARGET_CONFIG_ARGS=""
+CT_NCURSES_TARGET_FALLBACKS=""
 CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP ISL LIBELF LIBICONV MPC MPFR NCURSES ZLIB"
 CT_GMP_NEEDED=y
 CT_MPFR_NEEDED=y
+CT_ISL_NEEDED=y
 CT_MPC_NEEDED=y
+CT_EXPAT_NEEDED=y
+CT_NCURSES_NEEDED=y
 CT_GMP=y
 CT_MPFR=y
+CT_ISL=y
 CT_MPC=y
-CT_ALL_COMP_TOOLS_CHOICES="AUTOCONF AUTOMAKE DTC LIBTOOL M4 MAKE"
+CT_EXPAT=y
+CT_NCURSES=y
+CT_ALL_COMP_TOOLS_CHOICES="AUTOCONF AUTOMAKE BISON DTC LIBTOOL M4 MAKE"
