--- a/sh2eb-elf/host-x86_64-w64-mingw32.config
+++ b/sh2eb-elf/host-x86_64-w64-mingw32.config
@@ -21,8 +21,11 @@ CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_CONFIG_VERSION_CURRENT="3"
-CT_CONFIG_VERSION="3"
+CT_VERSION="1.25.0_rc1.5_6ddf9e8"
+CT_VCHECK=""
+CT_CONFIG_VERSION_ENV="4"
+CT_CONFIG_VERSION_CURRENT="4"
+CT_CONFIG_VERSION="4"
 CT_MODULES=y
 CT_EXPERIMENTAL=y
 CT_DEBUG_CT=y
@@ -35,9 +38,9 @@ CT_BUILD_DIR="${CT_BUILD_TOP_DIR}/build"
 CT_PREFIX_DIR="${CT_PREFIX:-${HOME}/x-tools}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
 CT_RM_RF_PREFIX_DIR=y
 CT_REMOVE_DOCS=y
+CT_STRIP_HOST_TOOLCHAIN_EXECUTABLES=y
 CT_INSTALL_LICENSES=n
 CT_PREFIX_DIR_RO=n
-CT_STRIP_HOST_TOOLCHAIN_EXECUTABLES=y
 CT_STRIP_TARGET_TOOLCHAIN_EXECUTABLES=y
 CT_DOWNLOAD_AGENT_WGET=y
 CT_CONNECT_TIMEOUT=10
@@ -52,6 +55,7 @@ CT_PARALLEL_JOBS=0
 CT_LOAD=""
 CT_USE_PIPES=y
 CT_EXTRA_CFLAGS_FOR_BUILD=""
+CT_EXTRA_CXXFLAGS_FOR_BUILD=""
 CT_EXTRA_LDFLAGS_FOR_BUILD=""
 CT_EXTRA_CFLAGS_FOR_HOST=""
 CT_EXTRA_LDFLAGS_FOR_HOST=""
@@ -69,7 +73,7 @@ CT_ARCH_SH_SHOW=y
 CT_ARCH_SH_PKG_KSYM=""
 CT_ARCH_SH_SH2=y
 CT_ARCH_SH_VARIANT="sh2"
-CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR C6X M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 POWERPC RISCV S390 SH SPARC X86 XTENSA"
+CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR C6X M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
 CT_ARCH_SUFFIX=""
 CT_OMIT_TARGET_VENDOR=y
 CT_ARCH_REQUIRES_MULTILIB=y
@@ -130,14 +134,8 @@ CT_BINUTILS_later_than_2_30=y
 CT_BINUTILS_2_30_or_later=y
 CT_BINUTILS_later_than_2_27=y
 CT_BINUTILS_2_27_or_later=y
-CT_BINUTILS_later_than_2_25=y
-CT_BINUTILS_2_25_or_later=y
-CT_BINUTILS_later_than_2_23=y
-CT_BINUTILS_2_23_or_later=y
-CT_BINUTILS_HAS_HASH_STYLE=y
-CT_BINUTILS_HAS_GOLD=y
-CT_BINUTILS_HAS_PLUGINS=y
-CT_BINUTILS_HAS_PKGVERSION_BUGURL=y
+CT_BINUTILS_later_than_2_26=y
+CT_BINUTILS_2_26_or_later=y
 CT_BINUTILS_LINKER_LD=y
 CT_BINUTILS_LINKERS_LIST="ld"
 CT_BINUTILS_LINKER_DEFAULT="bfd"
@@ -151,7 +149,7 @@ CT_LIBC_CHOICE_KSYM="NONE"
 CT_THREADS="none"
 CT_LIBC_NONE_SHOW=y
 CT_LIBC_NONE_PKG_KSYM=""
-CT_ALL_LIBC_CHOICES="AVR_LIBC BIONIC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE UCLIBC"
+CT_ALL_LIBC_CHOICES="AVR_LIBC BIONIC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE UCLIBC_NG"
 CT_CC_SUPPORT_CXX=y
 CT_CC_SUPPORT_FORTRAN=y
 CT_CC_SUPPORT_ADA=y
@@ -177,8 +175,6 @@ CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GCC_SIGNATURE_FORMAT=""
-CT_GCC_later_than_11_2=y
-CT_GCC_11_2_or_later=y
 CT_GCC_later_than_11=y
 CT_GCC_11_or_later=y
 CT_GCC_later_than_10=y
@@ -195,8 +191,6 @@ CT_GCC_later_than_5=y
 CT_GCC_5_or_later=y
 CT_GCC_later_than_4_9=y
 CT_GCC_4_9_or_later=y
-CT_GCC_later_than_4_8=y
-CT_GCC_4_8_or_later=y
 CT_CC_GCC_HAS_LIBMPX=y
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
 CT_CC_GCC_EXTRA_CONFIG_ARRAY="--disable-cld --disable-initfini-array --disable-largefile --disable-hosted-libstdcxx --disable-libstdc__-v3 --disable-libstdcxx-pch --disable-libstdcxx-threads --disable-libstdcxx-time --disable-objc-gc --disable-rpath --disable-dlopen --disable-shared --disable-threads --disable-tls --disable-win32-registry --disable-decimal-float --enable-cxx-flags"
@@ -205,54 +199,47 @@ CT_CC_GCC_STATIC_LIBSTDCXX=y
 CT_CC_GCC_CONFIG_TLS=m
 CT_CC_GCC_USE_GRAPHITE=y
 CT_CC_GCC_USE_LTO=y
+CT_CC_GCC_LTO_ZSTD=m
 CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
+CT_CC_GCC_TM_CLONE_REGISTRY=m
 CT_CC_GCC_DISABLE_PCH=y
-CT_CC_GCC_LDBL_128=m
 CT_CC_GCC_LNK_HASH_STYLE_DEFAULT=y
 CT_CC_GCC_LNK_HASH_STYLE=""
 CT_CC_GCC_DEC_FLOATS_NO=y
 CT_CC_GCC_DEC_FLOATS="no"
 CT_ALL_CC_CHOICES="GCC"
-CT_CC_LANG_OTHERS="c++"
+CT_CC_LANG_CXX=y
+CT_CC_LANG_OTHERS=""
 CT_DEBUG_GDB=y
 CT_DEBUG_GDB_PKG_KSYM="GDB"
 CT_GDB_DIR_NAME="gdb"
-CT_GDB_USE_GNU=y
-CT_GDB_USE="GDB"
 CT_GDB_PKG_NAME="gdb"
 CT_GDB_SRC_RELEASE=y
 CT_GDB_PATCH_GLOBAL=y
 CT_GDB_PATCH_ORDER="global"
-CT_GDB_V_11_2=y
+CT_GDB_V_11=y
 CT_GDB_VERSION="11.2"
 CT_GDB_MIRRORS="$(CT_Mirrors GNU gdb) $(CT_Mirrors sourceware gdb/releases)"
 CT_GDB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GDB_SIGNATURE_FORMAT=""
-CT_GDB_later_than_11_2=y
-CT_GDB_11_2_or_later=y
 CT_GDB_later_than_11=y
 CT_GDB_11_or_later=y
-CT_GDB_later_than_10_0=y
-CT_GDB_10_0_or_later=y
-CT_GDB_later_than_9_0=y
-CT_GDB_9_0_or_later=y
+CT_GDB_later_than_10=y
+CT_GDB_10_or_later=y
+CT_GDB_later_than_8_3=y
+CT_GDB_8_3_or_later=y
 CT_GDB_later_than_8_0=y
 CT_GDB_8_0_or_later=y
 CT_GDB_later_than_7_12=y
 CT_GDB_7_12_or_later=y
-CT_GDB_later_than_7_2=y
-CT_GDB_7_2_or_later=y
-CT_GDB_later_than_7_0=y
-CT_GDB_7_0_or_later=y
+CT_GDB_later_than_7_11=y
+CT_GDB_7_11_or_later=y
 CT_GDB_CROSS=y
 CT_GDB_CROSS_STATIC=y
 CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
-CT_GDB_HAS_PKGVERSION_BUGURL=y
-CT_GDB_HAS_PYTHON=y
-CT_GDB_INSTALL_GDBINIT=y
-CT_GDB_HAS_IPA_LIB=y
+CT_GDB_GDBSERVER_TOPLEVEL=y
 CT_ALL_DEBUG_CHOICES="DUMA GDB LTRACE STRACE"
 CT_COMP_LIBS_EXPAT=y
 CT_COMP_LIBS_EXPAT_PKG_KSYM="EXPAT"
@@ -261,8 +248,8 @@ CT_EXPAT_PKG_NAME="expat"
 CT_EXPAT_SRC_RELEASE=y
 CT_EXPAT_PATCH_GLOBAL=y
 CT_EXPAT_PATCH_ORDER="global"
-CT_EXPAT_V_2_2=y
-CT_EXPAT_VERSION="2.2.9"
+CT_EXPAT_V_2_4=y
+CT_EXPAT_VERSION="2.4.1"
 CT_EXPAT_MIRRORS="http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION} https://github.com/libexpat/libexpat/releases/download/R_${CT_EXPAT_VERSION//./_}"
 CT_EXPAT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_EXPAT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -282,6 +269,9 @@ CT_GETTEXT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GETTEXT_SIGNATURE_FORMAT="packed/.sig"
+CT_GETTEXT_0_21_or_later=y
+CT_GETTEXT_0_21_or_older=y
+CT_GETTEXT_INCOMPATIBLE_WITH_UCLIBC_NG=y
 CT_COMP_LIBS_GMP=y
 CT_COMP_LIBS_GMP_PKG_KSYM="GMP"
 CT_GMP_DIR_NAME="gmp"
@@ -296,15 +286,6 @@ CT_GMP_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GMP_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GMP_ARCHIVE_FORMATS=".tar.xz .tar.lz .tar.bz2"
 CT_GMP_SIGNATURE_FORMAT="packed/.sig"
-CT_GMP_later_than_6_2_1=y
-CT_GMP_6_2_1_or_later=y
-CT_GMP_later_than_6_0_0=y
-CT_GMP_6_0_0_or_later=y
-CT_GMP_later_than_5_1_0=y
-CT_GMP_5_1_0_or_later=y
-CT_GMP_later_than_5_0_0=y
-CT_GMP_5_0_0_or_later=y
-CT_GMP_REQUIRE_5_0_0_or_later=y
 CT_COMP_LIBS_ISL=y
 CT_COMP_LIBS_ISL_PKG_KSYM="ISL"
 CT_ISL_DIR_NAME="isl"
@@ -319,21 +300,10 @@ CT_ISL_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
 CT_ISL_SIGNATURE_FORMAT=""
-CT_ISL_later_than_0_24=y
-CT_ISL_0_24_or_later=y
 CT_ISL_later_than_0_18=y
 CT_ISL_0_18_or_later=y
 CT_ISL_later_than_0_15=y
 CT_ISL_0_15_or_later=y
-CT_ISL_REQUIRE_0_15_or_later=y
-CT_ISL_later_than_0_14=y
-CT_ISL_0_14_or_later=y
-CT_ISL_REQUIRE_0_14_or_later=y
-CT_ISL_later_than_0_13=y
-CT_ISL_0_13_or_later=y
-CT_ISL_later_than_0_12=y
-CT_ISL_0_12_or_later=y
-CT_ISL_REQUIRE_0_12_or_later=y
 CT_COMP_LIBS_LIBICONV=y
 CT_COMP_LIBS_LIBICONV_PKG_KSYM="LIBICONV"
 CT_LIBICONV_DIR_NAME="libiconv"
@@ -356,15 +326,14 @@ CT_MPC_SRC_RELEASE=y
 CT_MPC_PATCH_GLOBAL=y
 CT_MPC_PATCH_ORDER="global"
 CT_MPC_V_1_2=y
-CT_MPC_VERSION="1.2.0"
+CT_MPC_VERSION="1.2.1"
 CT_MPC_MIRRORS="http://www.multiprecision.org/downloads $(CT_Mirrors GNU mpc)"
 CT_MPC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_MPC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_MPC_ARCHIVE_FORMATS=".tar.gz"
 CT_MPC_SIGNATURE_FORMAT="packed/.sig"
-CT_MPC_1_2_0_or_later=y
+CT_MPC_later_than_1_1_0=y
 CT_MPC_1_1_0_or_later=y
-CT_MPC_1_1_0_or_older=y
 CT_COMP_LIBS_MPFR=y
 CT_COMP_LIBS_MPFR_PKG_KSYM="MPFR"
 CT_MPFR_DIR_NAME="mpfr"
@@ -379,12 +348,8 @@ CT_MPFR_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_MPFR_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_MPFR_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz .zip"
 CT_MPFR_SIGNATURE_FORMAT="packed/.asc"
-CT_MPFR_later_than_4_1_0=y
 CT_MPFR_later_than_4_0_0=y
 CT_MPFR_4_0_0_or_later=y
-CT_MPFR_later_than_3_0_0=y
-CT_MPFR_3_0_0_or_later=y
-CT_MPFR_REQUIRE_3_0_0_or_later=y
 CT_COMP_LIBS_NCURSES=y
 CT_COMP_LIBS_NCURSES_PKG_KSYM="NCURSES"
 CT_NCURSES_DIR_NAME="ncurses"
@@ -399,6 +364,7 @@ CT_NCURSES_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_NCURSES_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_NCURSES_ARCHIVE_FORMATS=".tar.gz"
 CT_NCURSES_SIGNATURE_FORMAT="packed/.sig"
+CT_NCURSES_NEW_ABI=y
 CT_NCURSES_HOST_CONFIG_ARGS=""
 CT_NCURSES_HOST_DISABLE_DB=y
 CT_NCURSES_HOST_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
@@ -418,7 +384,7 @@ CT_ZLIB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ZLIB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ZLIB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_ZLIB_SIGNATURE_FORMAT="packed/.asc"
-CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP ISL LIBELF LIBICONV MPC MPFR NCURSES PICOLIBC ZLIB"
+CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP GNUPRUMCU ISL LIBELF LIBICONV MPC MPFR NCURSES NEWLIB_NANO PICOLIBC ZLIB"
 CT_LIBICONV_NEEDED=y
 CT_GETTEXT_NEEDED=y
 CT_GMP_NEEDED=y
